--- a/index.html
+++ b/index.html
@@ -100,6 +100,43 @@
                 </li>
             </ul>
         </section>
+        <!--Опис наше портфоліо-->
+        <section>
+            <h2>Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/portfolio/bankihg-app.jpg" alt="Banking app" width="360" height="300">
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300">
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio/meditation-app.jpg" alt="Meditation App" width="360" height="300">
+                    <h3>Meditation App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio/taxi-service.jpg" alt="Taxi Service" width="360" height="300">
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio/screen-illustration.jpg" alt="Screen Illustrations" width="360"
+                        height="300">
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio/online-courses.jpg" alt="Online Courses" width="360" height="300">
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
         <a href="./index.html">WebStudio</a>
