--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <li>
                     <img class="team-foto" src="./images/camilagarcia.jpg" alt="photo Camila Garcia" width="264"
                         height="260" />
-                    <h3>Camila Garcia</h3>
+                    <h3 class="team-list-titel">Camila Garcia</h3>
                     <p class="team-text">Marketing</p>
                 </li>
                 <li>
