--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
                     <h3 class="team-list-titel">Mark Guerrero</h3>
                     <p class="team-text">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-list-iteam">
                     <img class="team-foto" src="./images/tomford.jpg" alt="photo Tom Ford" width="264" height="260" />
                     <h3 class="team-list-titel">Tom Ford</h3>
                     <p class="team-text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-list-iteam">
                     <img class="team-foto" src="./images/camilagarcia.jpg" alt="photo Camila Garcia" width="264"
                         height="260" />
                     <h3 class="team-list-titel">Camila Garcia</h3>
                     <p class="team-text">Marketing</p>
                 </li>
-                <li>
+                <li class="team-list-iteam">
                     <img class="team-foto" src="./images/danielwilson.jpg" alt="photo Daniel Wilson" width="264"
                         height="260" />
                     <h3 class="team-list-titel">Daniel Wilson</h3>
@@ -156,7 +156,7 @@
     </main>
     <!--FOOTER-->
     <footer class="footer">
-        <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a>
+        <a class="logo" href="./index.html">Web<span class="logo-text-footer">Studio</span></a>
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
