--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             <h2 class="advantages-h">Advantages</h2>
             <ul class="advantages-list">
                 <li class="advantages-list-item">
-                    <h3 class="advantages-titel"">Strategy</h3>
+                    <h3 class="advantages-titel">Strategy</h3>
                     <p class=" advantages-text">
                         Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.
-                        </p>
+                    </p>
                 </li>
                 <li class="advantages-list-item">
                     <h3 class="advantages-titel">Punctuality</h3>
