--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     <a class="header-link" href="/">Studio</a>
                 </li>
                 <li class="header-nav-item">
-                    <a class="header-link" href="/">Portfolio</a>
+                    <a class="header-link" href="">Portfolio</a>
                 </li>
                 <li class="header-nav-item">
-                    <a class="header-link" href="/">Contacts</a>
+                    <a class="header-link" href="">Contacts</a>
                 </li>
             </ul>
         </nav>
